# csvsource

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  go.mod  gogetsql.go  gogetsql_test.go
docs/: README.md  index.adoc  index.html
examples/: prefix_waterloo_tree_inventory.sql.example  small_waterloo_tree_Inventory.csv  type_checks.csv  waterloo_tree_inventory_prefix.txt  without_head.csv
src/: crates-api-token.txt  lib.rs  main.rs
utils/: string.go  string_test.go
