[package]
name = "roma"
version = "0.6.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap         = "3.0.7"
csv          = "1.1"
itertools    = "0.10.3"
serde        = {version = "1.0.133", features = ["derive"]}
tinytemplate = "1.2.1"