[package]
name    = "csvsource"
description = "Converts a CSV file to SQL Insert Statements."
license = "Apache-2.0"
version = "0.7.0"
edition = "2021"
documentation = "https://www.hildeberto.com/csvsource/"

[dependencies]
clap         = "3.0.7"  # Full handling of command line arguments
csv          = "1.1"    # Handling of csv files
itertools    = "0.10.3"
serde        = {version = "1.0.133", features = ["derive"]}
tinytemplate = "1.2.1"  # Template engine to extend the generated output with prefix and sufix content
